# sdl-basic-snake

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_flags.txt
src/: Main.cpp
src/Game/: Direction.cpp  Direction.hpp  Scene.cpp  Scene.hpp  Snake.cpp  Snake.hpp
src/SDL/: Context.cpp  Context.hpp  Renderer.cpp  Renderer.hpp  Surface.cpp  Surface.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
src/TTF/: Context.cpp  Context.hpp  Font.cpp  Font.hpp
